<resources>
    <string name="app_name">Anubis PUBG</string>
    <string name="anubis_mobile">Anubis Mobile</string>
    <string name="license_login">License Login</string>
    <string name="license_login_subtitle">Enter the key provided by admin. One key can be used on limited devices only.</string>
    <string name="license_key_hint">License key</string>
    <string name="activate_license">Activate</string>
    <string name="license_key_required">Enter your license key</string>
    <string name="license_login_success">Login successful</string>
    <string name="license_valid_until">Valid until %1$s</string>
    <string name="license_device_id">Device ID: %1$s</string>
    <string name="please_upgrade_to_premium">Please Upgrade to PREMIUM</string>
    <string name="recoil_weapon_slot_1">Recoil Weapon Slot 1</string>
    <string name="recoil_weapon_slot_2">Recoil Weapon Slot 2</string>
    <string name="sets_postion_x_of_touch_">Sets Postion X of Touch :</string>
    <string name="touch_position_y">Touch Position Y</string>
    <string name="menu">Menu</string>
    <string name="jlog2">English</string>
    <string name="jlog3">中國人</string>
    <string name="jlog5">عربي</string>
    <string name="jlog6">हिन्दी</string>
    <string name="jlog7">Русский</string>
    <string name="check_all">CHECK ALL</string>
    <string name="none_all">NONE ALL</string>
    <string name="special_item">Special Item</string>
    <string name="scopes">Scopes</string>
    <string name="ar_weapons">AR Weapons</string>
    <string name="others_weapon">Others Weapon</string>
    <string name="smg_weapons">SMG Weapons</string>
    <string name="sniper_weapons">Sniper Weapons</string>
    <string name="shotguns">Shotguns</string>
    <string name="pistols">Pistols</string>
    <string name="handy">Handy</string>
    <string name="throwables">Throwables</string>
    <string name="ammo_bullet">Ammo Bullet</string>
    <string name="bag__helmet_and_vest">Bag , Helmet and Vest</string>
    <string name="medics">Medics</string>
    <string name="suppressor_hider_compe">Suppressor, Hider, Compe</string>
    <string name="magazine">Magazine</string>
    <string name="grip">Grip</string>
    <string name="others">Others</string>
    <string name="fixed_crash">Fixed Crash</string>
    <string name="please_actived_in_first_logo_">please actived in first logo, for fix crash</string>
    <string name="magic_bullet_head">Magic Bullet Head</string>
    <string name="magic_bullet_head_all_weapon">Magic bullet head all weapon</string>
    <string name="hit_x_effect">Hit X Effect</string>
    <string name="hit_x_effect_active_in_game">Hit X Effect Active In Game</string>
    <string name="less_recoil">Less Recoil</string>
    <string name="reduce_recoil_all_weapon">Reduce recoil all weapon</string>
    <string name="protection_cheats">Protection Cheats</string>
    <string name="protection_logo">Protection Logo</string>
    <string name="crash_fix_2nd_logo">Crash Fix 2nd Logo</string>
    <string name="block_report_island">Block Report [Island]</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="erorserver">Check you connection</string>
    <string name="confirm">Confirm</string>
    <string name="activity_navigation_textroot_text">Root Access</string>
    <string name="bottom_sheet_dialog_layout_title_text">title</string>
    <string name="bottom_sheet_dialog_layout_msg_text">masasge</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">no</string>
    <string name="bottom_sheet_dialog_layout_btn_text">ok</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_aimbot_radioButton_text">Head</string>
    <string name="esp_aimbot_radioButton2_text">Neck</string>
    <string name="esp_aimbot_radioButton3_text">Chest</string>
    <string name="esp_aimbot_radioButton9_text">Crosshair Priority</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority</string>
    <string name="esp_aimbot_radioButton5_text">Ads or Firing</string>
    <string name="esp_aimbot_radioButton6_text">Ads Only</string>
    <string name="esp_aimbot_radioButton7_text">Firing Only</string>
    <string name="esp_inventory_UTV_text">UTV</string>
    <string name="esp_inventory_MonsterTruck_text">Monster</string>
    <string name="esp_inventory_Buggy_text">Buggy</string>
    <string name="esp_inventory_UAZ_text">UAZ</string>
    <string name="esp_inventory_Trike_text">Trike</string>
    <string name="esp_inventory_Jet_text">Jet</string>
    <string name="esp_inventory_CoupeRB_text">CoupeRB</string>
    <string name="esp_inventory_Motorglider_text">Motor Glider</string>
    <string name="esp_inventory_Bike_text">Bike</string>
    <string name="esp_inventory_Dacia_text">Dacia</string>
    <string name="esp_inventory_Boat_text">Boat</string>
    <string name="esp_inventory_Bus_text">Bus</string>
    <string name="esp_inventory_Mirado_text">Mirado</string>
    <string name="esp_inventory_Snowbike_text">Snowbike</string>
    <string name="esp_inventory_Scooter_text">Scooter</string>
    <string name="esp_inventory_Rony_text">Rony</string>
    <string name="esp_inventory_Snowmobile_text">Snowmobile</string>
    <string name="esp_inventory_Tempo_text">Tempo</string>
    <string name="esp_inventory_Truck_text">Truck</string>
    <string name="esp_inventory_LadaNiva_text">LadaNiva</string>
    <string name="esp_inventory_BRDM_text">BRDM</string>
    <string name="esp_inventory_ATV_text">ATV1</string>
    <string name="esp_inventory_Crate_text">Crate</string>
    <string name="esp_inventory_Airdrop_text">AirDrop</string>
    <string name="esp_inventory_DropPlane_text">DropPlane</string>
    <string name="esp_inventory_FlareGun_text">FlareGun</string>
    <string name="esp_inventory_lootbox_text">LootBox</string>
    <string name="esp_inventory_x2_text">2x</string>
    <string name="esp_inventory_x3_text">3x</string>
    <string name="esp_inventory_x4_text">4x</string>
    <string name="esp_inventory_x6_text">6x</string>
    <string name="esp_inventory_x8_text">8x</string>
    <string name="esp_inventory_reddot_text">Red Dot</string>
    <string name="esp_inventory_hollow_text">Hollow</string>
    <string name="esp_inventory_canted_text">Canted</string>
    <string name="esp_inventory_m416_text">M416</string>
    <string name="esp_inventory_AKM_text">AKM</string>
    <string name="esp_inventory_M16A4_text">M16A4</string>
    <string name="esp_inventory_M762_text">M762</string>
    <string name="esp_inventory_SCARL_text">SCAR-L</string>
    <string name="esp_inventory_AC32_text">ACE32</string>
    <string name="esp_inventory_AUG_text">AUG</string>
    <string name="esp_inventory_HoneyBadger_text">Honey Badger</string>
    <string name="esp_inventory_G36C_text">G36C</string>
    <string name="esp_inventory_Groza_text">Groza</string>
    <string name="esp_inventory_QBZ_text">QBZ</string>
    <string name="esp_inventory_FAMAS_text">FAMAS</string>
    <string name="esp_inventory_M249_text">M249</string>
    <string name="esp_inventory_DP28_text">DP28</string>
    <string name="esp_inventory_MG3_text">MG3</string>
    <string name="esp_inventory_UMP_text">UMP</string>
    <string name="esp_inventory_TommyGun_text">TommyGun</string>
    <string name="esp_inventory_vector_text">Vector</string>
    <string name="esp_inventory_MP5K_text">MP5K</string>
    <string name="esp_inventory_P90_text">P90</string>
    <string name="esp_inventory_UZI_text">UZI</string>
    <string name="esp_inventory_bizon_text">Bizon</string>
    <string name="esp_inventory_AWM_text">AWM</string>
    <string name="esp_inventory_Kar98k_text">Kar98k</string>
    <string name="esp_inventory_M24_text">M24</string>
    <string name="esp_inventory_QBU_text">QBU</string>
    <string name="esp_inventory_Mini14_text">Mini14</string>
    <string name="esp_inventory_SKS_text">SKS</string>
    <string name="esp_inventory_SLR_text">SLR</string>
    <string name="esp_inventory_MK14_text">MK14</string>
    <string name="esp_inventory_Mosin_text">Mosin</string>
    <string name="esp_inventory_Win94_text">Win94</string>
    <string name="esp_inventory_MK12_text">MK12</string>
    <string name="esp_inventory_VSS_text">VSS</string>
    <string name="esp_inventory_AMR_text">AMR</string>
    <string name="esp_inventory_MK47_text">MK47</string>
    <string name="esp_inventory_S12K_text">S12K</string>
    <string name="esp_inventory_S1897_text">S1897</string>
    <string name="esp_inventory_S686_text">S686</string>
    <string name="esp_inventory_M1014_text">M1014</string>
    <string name="esp_inventory_sawed_text">Sawed-Off</string>
    <string name="esp_inventory_DBS_text">DBS</string>
    <string name="esp_inventory_NS2000_text">NS2000</string>
    <string name="esp_inventory_P92_text">P92</string>
    <string name="esp_inventory_R45_text">R45</string>
    <string name="esp_inventory_P18C_text">P18C</string>
    <string name="esp_inventory_P1911_text">P1911</string>
    <string name="esp_inventory_R1895_text">R1895</string>
    <string name="esp_inventory_Scorpion_text">Scorpion</string>
    <string name="esp_inventory_Desert_text">Dessert Eagle</string>
    <string name="esp_inventory_Pan_text">Pan</string>
    <string name="esp_inventory_Machete_text">Machete</string>
    <string name="esp_inventory_Sickle_text">Sickle</string>
    <string name="esp_inventory_Crowbar_text">Crowbar</string>
    <string name="esp_inventory_Crossbow_text">Crossbow</string>
    <string name="esp_inventory_Explosive_text">Explosive Bow</string>
    <string name="esp_inventory_grenade_text">Grenade</string>
    <string name="esp_inventory_molotov_text">Molotov</string>
    <string name="esp_inventory_smoke_text">Smoke</string>
    <string name="esp_inventory_stun_text">Stun</string>
    <string name="esp_inventory_a9_text">9mm</string>
    <string name="esp_inventory_a7_text">7.62mm</string>
    <string name="esp_inventory_a5_text">5.56mm</string>
    <string name="esp_inventory_a12_text">12Gauge</string>
    <string name="esp_inventory_a300_text">300Magnum</string>
    <string name="esp_inventory_a45_text">45ACP</string>
    <string name="esp_inventory_arrow_text">Arrow</string>
    <string name="esp_inventory_BMG50_text">50BMG</string>
    <string name="esp_inventory_bag1_text">Bag L1</string>
    <string name="esp_inventory_helmet1_text">Helmet L1</string>
    <string name="esp_inventory_bag2_text">Bag L2</string>
    <string name="esp_inventory_helmet2_text">Helmet L2</string>
    <string name="esp_inventory_bag3_text">Bag L3</string>
    <string name="esp_inventory_helmet3_text">Helmet L3</string>
    <string name="esp_inventory_vest1_text">Vest L1</string>
    <string name="esp_inventory_vest2_text">Vest L2</string>
    <string name="esp_inventory_vest3_text">Vest L3</string>
    <string name="esp_inventory_bandage_text">Bandage</string>
    <string name="esp_inventory_medkit_text">MedKit</string>
    <string name="esp_inventory_firstaid_text">FirstAid</string>
    <string name="esp_inventory_injection_text">Injection</string>
    <string name="esp_inventory_painkiller_text">PainKiller</string>
    <string name="esp_inventory_energydrink_text">EnergyDrink</string>
    <string name="esp_inventory_SuppressorAr_text">Suppressor Ar</string>
    <string name="esp_inventory_SuppressorSMG_text">Suppressor SMG</string>
    <string name="esp_inventory_FlashHiderAr_text">Flash Hider Ar</string>
    <string name="esp_inventory_FlashHiderSMG_text">Flash Hider SMG</string>
    <string name="esp_inventory_ArCompensator_text">Compensator Ar</string>
    <string name="esp_inventory_CompensatorSMG_text">Compensator SMG</string>
</resources>